change ywc18 to jwc12

--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -12,7 +12,7 @@
       </button>
     </mat-card-header>
   </mat-card>
-  <div class="countdown-preview">
+  <a class="countdown-preview" routerLink="/live">
     <app-countdown></app-countdown>
-  </div>
+  </a>
 </div>
