--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,10 @@ body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
   background: #111;
   color: #fefefe;
+  background: linear-gradient(180deg, #8e269f 0%, #131d38 75%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover, cover;
 }
 
 a {
