--- a/src/app/components/countdown/countdown.component.scss
+++ b/src/app/components/countdown/countdown.component.scss
@@ -10,7 +10,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/assets/bg01.svg');
+  background: url('/assets/bg01.svg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -163,17 +163,4 @@
     border: 3px solid #e4d0a2;
     box-sizing: border-box;
   }
-}
-
-.bg-decorator {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url('/assets/bg01.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  z-index: 0;
 }
