--- a/src/app/components/countdown/countdown.component.scss
+++ b/src/app/components/countdown/countdown.component.scss
@@ -32,17 +32,29 @@
   position: relative;
   border: 5px solid #e4d0a2;
   border-radius: 40px;
+  &.warn {
+    animation: warning 2s infinite;
+  }
 }
 
-@keyframes text-warning {
+@keyframes warning {
   0% {
     color: #e4d0a2;
+    transform: scale(1);
+  }
+  25% {
+    color: #fefefe;
   }
   50% {
+    color: #e4d0a2;
+    transform: scale(1.1);
+  }
+  75% {
     color: #fefefe;
   }
   100% {
     color: #e4d0a2;
+    transform: scale(1);
   }
 }
 
@@ -57,7 +69,7 @@
     text-align: center;
   }
   &.warn {
-    animation: text-warning 2s infinite;
+    animation: warning 2s infinite;
   }
 
   @media screen and (max-width: 800px) {
@@ -142,25 +154,4 @@
   right: 1.5em;
   top: 1.5em;
   width: 12.5em;
-}
-
-.underline {
-  width: 100%;
-  height: 3px;
-  background-color: #e4d0a2;
-  position: relative;
-
-  &.dot::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 20px;
-    height: 20px;
-    background-color: #6b541f;
-    border-radius: 100%;
-    border: 3px solid #e4d0a2;
-    box-sizing: border-box;
-  }
 }
